<resources>
    <string name="app_name">PlayerGroup</string>

    <string name="dialog_alert_msg_network">네트워크가 연결되어 있지 않습니다.\n와이파이 혹은 모바일 데이터 연결을 확인해 주세요.</string>
    <string name="dialog_alert_msg_error">관리자에게 문의해 주세요.</string>
    <string name="app_finish_btn">종료하기</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="send">보내기</string>
    <string name="save">등록하기</string>
    <string name="update">수정하기</string>

    <string name="go_home">홈으로</string>
    <string name="register_success">등록되었습니다.</string>

    <string name="input_email">Email</string>
    <string name="input_email_helper">꼭! 이메일이여야 합니다. 비밀번호 찾을 때 사용 합니다.</string>
    <string name="input_pw">Password</string>
    <string name="input_pw_help">8 ~ 16 자, 문자, 특수 기호 모두포함.</string>
    <string name="input_pw_error">비밀번호는 8 ~ 16자, 문자, 특수기호 모두포함 해 주세요.</string>
    <string name="input_pw2_help">위와 동일한 비밀번호를 입력해 주세요!</string>

    <string name="input_empty_error">아이디 및 비밀번호를 정확히 입력해 주세요.</string>
    <string name="input_search_email_empty_error">아이디를 정확히 입력해 주세요.</string>
    <string name="email_check">인증 메일을 보내드렸습니다.\n확인 후 인증하여 회원가입을 완료해 주세요.</string>
    <string name="non_email_check">메일 인증이 되지 않았습니다. 인증 후 다시 시도해 주세요.</string>
    <string name="email_error_info">이메일 형식이 아닙니다.</string>

    <string name="login_other_way">다른 방법으로 로그인하기</string>
    <string name="email">이메일</string>
    <string name="logout">로그아웃</string>
    <string name="dropout">서비스 탈퇴</string>
    <string name="join_page">간편 회원 가입</string>
    <string name="join">회원가입</string>
    <string name="search_member">아이디 / 비밀번호 찾기</string>
    <string name="search_sub_title">찾으려는 사용자의 이메일을 입력하세요.</string>
    <string name="login">로그인</string>
    <string name="go_to_login">로그인 하러 가기</string>
    <string name="google_login">구글 로그인</string>
    <string name="go_to_login_page">이미 가입하셨나요? 로그인하기</string>
    <string name="login_skip">둘러보기</string>
    <string name="join_ok">회원가입</string>
    <string name="login_sub_title">with your social network</string>
    <string name="input_name">이름</string>
    <string name="search_name">동호회 이름을 검색해 보세요.</string>

    <string name="member_info">내 정보</string>
    <string name="member_info_height">키</string>
    <string name="member_info_weight">몸무게</string>
    <string name="member_info_addr">거주 지역</string>
    <string name="member_info_sex">성별</string>
    <string name="member_info_addr_helper">ex ) 서울 송파구 신천동 </string>
    <string name="member_info_age">출생연도</string>
    <string name="member_info_position">포지션</string>
    <string name="member_info_position_helper">ex ) 센터, 포워드, 가드.. </string>
    <string name="member_info_detail">간단하게 하고싶은 말</string>

    <!-- 테마 -->
    <string name="theme_system_default">시스템 기본 테마</string>
    <string name="theme_light">밝은 테마</string>
    <string name="theme_dark">어두운 테마</string>

    <!-- 캘린더 -->
    <string name="calendar_sun">일</string>
    <string name="calendar_mon">월</string>
    <string name="calendar_the">화</string>
    <string name="calendar_wed">수</string>
    <string name="calendar_thu">목</string>
    <string name="calendar_fri">금</string>
    <string name="calendar_sat">토</string>
    <string name="calendar_today">오늘</string>
    <string name="calendar_title">날짜를 선택하세요</string>

    <string name="profile_img_see">프로필 사진 보기</string>
    <string name="profile_img_selector">프로필 사진 선택</string>
    <string name="profile_edit_is_empty">모두 빠짐없이 입력 부탁 드립니다..</string>
    <string name="profile_first_entry_back_key_info">프로필을 작성해 주셔야 앱 이용이 가능 합니다.</string>
    <string name="profile_edit_mode_back_key_info">프로필 수정중 입니다.\n저장하지 않고 나가시겠습니까?</string>
    <string name="profile_edit_save_confirm_info">저장하시겠습니까?</string>

    <string name="board_text">게시판</string>
    <string name="board_create">글 작성하기</string>
    <string name="board_category_select">게시판을 선택해주세요</string>
    <string name="board_title">제목을 입력해주세요.</string>
    <string name="board_sub">내용을 작성해주세요.</string>
    <string name="board_review_edit">댓글을 작성해보세요.</string>

    <string name="service_drop_out_info">정말로 서비스 회원 탈퇴를 진행 하시겠습니까?\n확인을 누르면 바로 회원 탈퇴가 진행됩니다.</string>

</resources>
