<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- 왼쪽 가이드 라인 -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gd_line_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <!-- 오른 쪽 가이드 라인 -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gd_line_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintStart_toStartOf="@id/gd_line_left"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_back" />

            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="@id/gd_line_right"
                app:layout_constraintStart_toStartOf="@id/gd_line_left"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_my_info_name"
                style="@style/textInputLayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/input_name"
                app:layout_constraintEnd_toEndOf="@id/gd_line_right"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@id/gd_line_left"
                app:layout_constraintTop_toBottomOf="@+id/iv_img">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_my_info_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:nextFocusDown="@id/ll_my_info_height"
                    android:overScrollMode="always" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- 키 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_my_info_height"
                style="@style/textInputLayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/member_info_height"
                app:layout_constraintEnd_toStartOf="@+id/ll_my_info_weight"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toStartOf="@id/gd_line_left"
                app:layout_constraintTop_toBottomOf="@+id/ll_my_info_name">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_my_info_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- 몸무게 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_my_info_weight"
                style="@style/textInputLayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/member_info_weight"
                app:layout_constraintBottom_toBottomOf="@+id/ll_my_info_height"
                app:layout_constraintEnd_toStartOf="@+id/ll_my_info_position"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toEndOf="@+id/ll_my_info_height"
                app:layout_constraintTop_toTopOf="@+id/ll_my_info_height">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_my_info_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_my_info_position"
                style="@style/textInputLayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/member_info_position"
                android:maxLength="10"
                app:layout_constraintBottom_toBottomOf="@+id/ll_my_info_height"
                app:layout_constraintEnd_toEndOf="@+id/gd_line_right"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/ll_my_info_weight"
                app:layout_constraintTop_toTopOf="@+id/ll_my_info_height">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_my_info_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:maxLines="1"
                    android:overScrollMode="always" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- 거주지역 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_my_info_addr"
                style="@style/textInputLayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/member_info_addr"
                android:maxLength="10"
                app:helperText="@string/member_info_addr_helper"
                app:layout_constraintEnd_toStartOf="@+id/ll_my_info_age"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@id/gd_line_left"
                app:layout_constraintTop_toBottomOf="@+id/ll_my_info_height">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_my_info_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/ll_my_info_age"
                    android:overScrollMode="always" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- 생년월일 -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_my_info_age"
                style="@style/textInputLayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/member_info_age"
                app:layout_constraintEnd_toEndOf="@+id/gd_line_right"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/ll_my_info_addr"
                app:layout_constraintTop_toTopOf="@+id/ll_my_info_addr">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_my_info_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ll_my_info_hope"
                style="@style/textInputLayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/member_info_detail"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintEnd_toEndOf="@+id/gd_line_right"
                app:layout_constraintStart_toStartOf="@+id/gd_line_left"
                app:layout_constraintTop_toBottomOf="@+id/ll_my_info_addr">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_my_info_hope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:overScrollMode="always" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/btnColorPositive"
                android:text="@string/save"
                android:layout_marginTop="8dp"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/ll_my_info_hope"
                app:layout_constraintStart_toStartOf="@id/gd_line_left"
                app:layout_constraintEnd_toEndOf="@id/gd_line_right"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>