<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="20dp"
    android:background="@drawable/shape_top_rounded_corner_14dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/icDrag"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/btnColorNegative"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginHorizontal="24dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="테마 선택"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioDefaultTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:textSize="15dp"
            android:textColor="@color/selector_radio_txt_checked_color"
            app:buttonTint="@color/selector_radio_btn_checked_color"
            app:useMaterialThemeColors="false"
            android:text="@string/theme_system_default"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioLightTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:textSize="15dp"
            android:textColor="@color/selector_radio_txt_checked_color"
            app:buttonTint="@color/selector_radio_btn_checked_color"
            app:useMaterialThemeColors="false"
            android:text="@string/theme_light"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15dp"
            android:textColor="@color/selector_radio_txt_checked_color"
            app:buttonTint="@color/selector_radio_btn_checked_color"
            app:useMaterialThemeColors="false"
            android:text="@string/theme_dark"/>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>